--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 				</nav>
 			</header>
 			<main class="page">
-				<div class="page__calendar calendar">
-					<div class="calendar__container" id="jenya-sasha">
+				<div class="page__calendar calendar__container">
+					<div class="calendar" id="jenya-sasha">
 						<h1 class="calendar__title title">Навчання (Женя / Саша)</h1>
 						<div class="calendar__row row">
 							<ul class="row__list list">
@@ -34,7 +34,7 @@
 							</ul>
 							<ul class="row__list list">
 								<li class="list__title">Вівторок</li>
-								<li class="list__item">Фортепіано<span class="item__time">8:50</span></li>
+								<!-- <li class="list__item">Фортепіано<span class="item__time">8:50</span></li> -->
 								<li class="list__item mark">Школа<span class="item__time">13:00</span></li>
 								<li class="list__item">.......................................</li>
 								<li class="list__item">.......................................</li>
@@ -53,7 +53,7 @@
 								
 							</ul>
 							<ul class="row__list list">
-								<li class="list__title">Четверг</li>
+								<li class="list__title">Четвер</li>
 								<li class="list__item"><span>Фортепіано</span><span class="item__time">8:50</span></li>
 								<li class="list__item"><span>Сольфеджіо</span><span class="item__time">9:40</span></li>
 								<li class="list__item mark">Школа<span class="item__time">12:00</span></li>
@@ -65,7 +65,7 @@
 							</ul>
 							<ul class="row__list list">
 								<li class="list__title">П`ятниця</li>
-								<li class="list__item"><span>Фортепіано</span><span class="item__time">8:50</span></li>
+								<!-- <li class="list__item"><span>Фортепіано</span><span class="item__time">8:50</span></li> -->
 								<li class="list__item mark">Школа<span class="item__time">13:50</span></li>
 								<li class="list__item">Англійська(Саша)<span class="item__time">17:30</span></li>
 								<li class="list__item">Англійська(Женя)<span class="item__time">21:00</span></li>
@@ -136,7 +136,7 @@
 								
 							</ul>
 							<ul class="row__list list">
-								<li class="list__title">Четверг</li>
+								<li class="list__title">Четвер</li>
 								<li class="list__item">.......................................</li>
 								<li class="list__item">.......................................</li>
 								<li class="list__item">.......................................</li>
